--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^2.0",
+        "doctrine/dbal": "3.3",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.7",
@@ -23,6 +24,7 @@
         "lcobucci/jwt": "^4.0",
         "league/flysystem-aws-s3-v3": "^1.0",
         "maatwebsite/excel": "^3.1",
+        "nesbot/carbon": "2.70",
         "pusher/pusher-php-server": "^7.0",
         "ramsey/uuid": "^4.2",
         "riskihajar/terbilang": "1.2.x",
