--- a/.env.example
+++ b/.env.example
@@ -35,7 +35,7 @@ MAIL_USERNAME=
 MAIL_PASSWORD=""  # Bungkus App Password dengan tanda kutip
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=
-MAIL_FROM_NAME="Kantor"
+MAIL_FROM_NAME="PT Indiga Nusa Digitama"
 
 
 PUSHER_APP_ID=
